@@ -4,6 +4,7 @@ Pending changes in the mainline
 Maintenance
 -----------
 
+* Don't consider tags whose group is below 0x0008 in C-FIND SCP
 * Fix issue #118 (Wording in Configuration.json regarding SynchronousCMove)
 * Fix issue #124 (GET /studies/ID/media fails for certain dicom file)
 * Fixed Orthanc Explorer on IE and Firefox: Explorer always show "too many results"
